--- a/static/index.html
+++ b/static/index.html
@@ -53,6 +53,7 @@
     <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
 </div>
 <div class="clock"></div>
+<script src="/socket.io/socket.io.js"></script>
 <script src="index.js"></script>
 </body>
 </html>
