--- a/static/index.html
+++ b/static/index.html
@@ -15,10 +15,19 @@
 <div class="editor">
     <input class="checkbox" type="checkbox" ><br>
     <input id="fear" type="checkbox" ><br>
-    <input class="input inputtext" type="text">
+    <div>
+        Название
+    </div>
+    <textarea class="input inputtext" type="text" cols="35" rows="5"></textarea>
     <br>
     <br>
+    <div>
+        Зависим
+    </div>
     <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
+    <div>
+        Открывает
+    </div>
     <br>
     <input type="date" id="date" name="trip-start">
     <input type="time" id="time" name="appt"
