--- a/static/index.html
+++ b/static/index.html
@@ -19,15 +19,14 @@
         Название
     </div>
     <textarea class="input inputtext" type="text" cols="35" rows="5"></textarea>
-    <br>
-    <br>
     <div>
         Зависим
     </div>
     <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
     <div>
-        Открывает
+        Блокирует
     </div>
+    <textarea class="input inputopns" name="tags" cols="35" rows="5"></textarea>
     <br>
     <input type="date" id="date" name="trip-start">
     <input type="time" id="time" name="appt"
