--- a/static/index.html
+++ b/static/index.html
@@ -2,44 +2,52 @@
 <html lang="en">
 
 <head>
-    <script src="jquery.js"></script>
-    <script src="util.js"></script>
+  <script src="jquery.js"></script>
+  <script src="util.js"></script>
 
-    <meta charset="UTF-8">
-    <title>JinWish</title>
-    <link rel="stylesheet" href="main.css">
-    <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+  <meta charset="UTF-8">
+  <title>JinWish</title>
+  <link rel="stylesheet" href="main.css">
+  <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
 
 <body>
-    <div id="tasks" class="list">
+  <div id="tasks" class="list">
 
+  </div>
+  <div class="editor">
+    <button class='delete' value='del'>del</button><br>
+    <span>Активно</span>
+    <input class="checkbox" type="checkbox"> <br>
+    <select id ="priority" size="7" name="hero">
+        <option value="red">Важно!</option>
+      <option value="grey">Бери и делай</option>
+      <option value="yellow">На днях</option>
+      <option value="green">Если хочешь</option>
+      <option value="blue">Цель</option>
+      <option value="cyan">Мечта</option>
+      <option value="white">Сведения</option>
+    </select><br>
+    <div>
+      Название
     </div>
-    <div class="editor">
-        <span>Активно</span>
-        <input class="checkbox" type="checkbox"> <br>
-        <span>Ярко</span>
-        <input id="fear" type="checkbox"><br>
-        <div>
-            Название
-        </div>
-        <textarea class="input inputtext" type="text" cols="35" rows="5"></textarea>
-        <div>
-            Зависим
-        </div>
-        <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
-        <div>
-            Блокирует
-        </div>
-        <textarea class="input inputopns" name="tags" cols="35" rows="5"></textarea>
-        <br>
-        <input type="date" id="date" name="trip-start">
-        <input type="time" id="time" name="time">
+    <textarea class="input inputtext" type="text" cols="35" rows="5"></textarea>
+    <div>
+      Зависим
     </div>
-    <div class="clock"></div>
-    <div id="status">offline</div>
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="index.js"></script>
+    <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
+    <div>
+      Блокирует
+    </div>
+    <textarea class="input inputopns" name="tags" cols="35" rows="5"></textarea>
+    <br>
+    <input type="date" id="date" name="trip-start">
+    <input type="time" id="time" name="time">
+  </div>
+  <div class="clock"></div>
+  <div id="status">offline</div>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
