--- a/static/index.html
+++ b/static/index.html
@@ -20,6 +20,7 @@
     <span>Активно</span>
     <input class="checkbox" type="checkbox"> <br>
     <select id="priority" size="7" name="hero">
+      <option value="steel">Условие</option>
       <option value="red">Обязательство</option>
       <option value="yellow">Бери и делай</option>
       <option value="green">На днях</option>
