--- a/desktop/index.html
+++ b/desktop/index.html
@@ -56,6 +56,8 @@
   <div class="clock"></div>
   <div id="status">offline</div>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="desktop.js"></script>
+  <script src="exe.js"></script>
   <script src="index.js"></script>
 </body>
 
