--- a/desktop/index.html
+++ b/desktop/index.html
@@ -16,18 +16,20 @@
 
   </div>
   <div class="editor">
-    <button class='delete' value='del'>Удалить</button><br>
+    <button class='delete' value='del'>Удалить</button>
     <span>Активно</span>
     <input class="checkbox" type="checkbox"> <br>
-    <select id="priority" size="8" name="hero">
-      <option value="steel">Условие</option>
-      <option value="red">Обязательство</option>
-      <option value="yellow">Бери и делай</option>
-      <option value="green">На днях</option>
-      <option value="blue">Цели</option>
-      <option value="purple">Вдохновляет</option>
-      <option value="cyan">Идеи</option>
-      <option value="grey">Заметки</option>
+    <select id="priority" size="10" name="hero">
+      <option value="first">Идеи</option>
+      <option value="second">Условия</option>
+      <option value="third">ТО</option>
+      <option value="forth">Бери и делай</option>
+      <option value="fifth">Обязательство</option>
+      <option value="sixth">Доход/Расход</option>
+      <option value="seventh">Новые горизонты</option>
+      <option value="eighth">Порядок</option>
+      <option value="ninth">Хочу!</option>
+      <option value="tenth">Заметки</option>
     </select><br>
     <div>
       Название
@@ -48,6 +50,7 @@
     <button id="plustoday">Сегодня</button>
     <button id="plusnow">Сейчас</button>
     <button id="plusday">+1 день</button>
+    <button id="tomorrow">Завтра</button>
     <button id="plushour">+1 час</button><br>
     <button id="plus15">+15 минут</button>
     <button id="plusweek">+1 неделя</button>
