--- a/desktop/index.html
+++ b/desktop/index.html
@@ -62,6 +62,10 @@
   <script src="desktop.js"></script>
   <script src="exe.js"></script>
   <script src="index.js"></script>
+  <script src="moment.js"></script>
+  <script>
+    moment().format();
+  </script>
 </body>
 
 </html>
