--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -17,16 +17,16 @@
     <button class='delete' value='del'>Удалить</button>
     <span>Активно</span>
     <input class="checkbox" type="checkbox">
-    <select id="priority" size="8" name="hero">
+    <select id="priority" size="10" name="hero">
       <option value="first">Идеи</option>
-      <option value="second">Условие</option>
+      <option value="second">Условия</option>
       <option value="third">ТО</option>
-      <option value="forth">!!!</option>
+      <option value="forth">Бери и делай</option>
       <option value="fifth">Обязательство</option>
-      <option value="sixth">Хочу</option>
-      <option value="seventh">Убыток или Доход</option>
-      <option value="eighth">Новые горизонты</option>
-      <option value="ninth">Порядок</option>
+      <option value="sixth">Доход/Расход</option>
+      <option value="seventh">Новые горизонты</option>
+      <option value="eighth">Порядок</option>
+      <option value="ninth">Хочу!</option>
       <option value="tenth">Заметки</option>
     </select>
     <span>
