--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -12,6 +12,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
   <meta charset="UTF-8">
   <title>Lighthouse ToDo</title>
+  <link rel="apple-touch-icon" href="./favicon.png" />
+  <link rel="apple-touch-startup-image" href="./favicon.png" />
   <link rel="stylesheet" href="mobile.css">
   <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
@@ -37,7 +39,7 @@
     <textarea placeholder="Зависим..." class="input inputtags" name="tags" cols="35" rows="5"></textarea>
     <textarea placeholder="Блокирует..." class="input inputopns" name="tags" cols="35" rows="5"></textarea>
     <input type="date" id="date" name="trip-start">
-    <input type="time" id="time" name="time">
+    <input type="time" id="time" name="time"><br>
     <button id="plustoday">Сегодня</button>
     <button id="plusnow">Сейчас</button>
     <button id="plusday">+1 день</button>
