--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -13,6 +13,7 @@
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name = "viewport" content = "user-scalable=no, width=device-width">
   <title>Lighthouse ToDo</title>
   <link rel="apple-touch-icon" href="./favicon.png" />
   <link rel="apple-touch-startup-image" href="./favicon.png" />
