--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -44,12 +44,12 @@
     </select>
     <input type="date" id="date" name="trip-start">
     <input type="time" id="time" name="time"><br>
-    <button id="plustoday">Сегодня</button>
-    <button id="plusnow">Сейчас</button>
-    <button id="plusday">+1 день</button>
-    <button id="plushour">+1 час</button>
-    <button id="plus15">+15 минут</button>
-    <button id="plusweek">+1 неделя</button>
+    <button class="timebutton" id="plustoday">Сегодня</button>
+    <button class="timebutton" id="plusnow">Сейчас</button>
+    <button class="timebutton" id="plusday">+1 день</button>
+    <button class="timebutton" id="plushour">+1 час</button>
+    <button class="timebutton" id="plus15">+15 минут</button>
+    <button class="timebutton" id="plusweek">+1 неделя</button>
   </div>
   <div id="tasks" class="list"></div>
 
