--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-  <div class="editor">
+  <!-- <div class="editor">
     <button class='delete' value='del'>Удалить</button>
     <span>Активно</span>
     <input class="checkbox" type="checkbox">
@@ -50,7 +50,7 @@
     <button class="timebutton" id="plushour">+1 час</button>
     <button class="timebutton" id="plus15">+15 минут</button>
     <button class="timebutton" id="plusweek">+1 неделя</button>
-  </div>
+  </div> -->
   <div id="tasks" class="list"></div>
 
 
