--- a/desktop/index.html
+++ b/desktop/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <script src="moment.js"></script>
-    <script>
-      moment().format();
-    </script>
+  <script src="moment.js"></script>
+  <script>
+    moment().format();
+  </script>
   <script src="jquery.js"></script>
   <script src="util.js"></script>
 
@@ -23,17 +23,18 @@
     <button class='delete' value='del'>Удалить</button>
     <span>Активно</span>
     <input class="checkbox" type="checkbox"> <br>
-    <select id="priority" size="10" name="hero">
-      <option value="first">Идеи</option>
-      <option value="second">Условия</option>
-      <option value="third">ТО</option>
-      <option value="forth">Бери и делай</option>
-      <option value="fifth">Обязательство</option>
-      <option value="sixth">Доход/Расход</option>
-      <option value="seventh">Новые горизонты</option>
-      <option value="eighth">Порядок</option>
-      <option value="ninth">Хочу!</option>
-      <option value="tenth">Заметки</option>
+    <select id="priority" size="11" name="hero">
+      <option class="first" value="first">Идеи</option>
+      <option class="second" value="second">Условия</option>
+      <option class="third" value="third">ТО</option>
+      <option class="forth" value="forth">Бери и делай</option>
+      <option class="fifth" value="fifth">Обязательство</option>
+      <option class="sixth" value="sixth">Доход/Расход</option>
+      <option class="seventh" value="seventh">Заточка</option>
+      <option class="eighth" value="eighth">Новые горизонты</option>
+      <option class="ninth" value="ninth">Порядок</option>
+      <option class="tenth" value="tenth">Хочу!</option>
+      <option class="eleventh" value="eleventh">Заметки</option>
     </select><br>
     <div>
       Название
