--- a/desktop/index.html
+++ b/desktop/index.html
@@ -10,7 +10,7 @@
   <script src="util.js"></script>
 
   <meta charset="UTF-8">
-  <title>JinWish</title>
+  <title>Lighthouse ToDo</title>
   <link rel="stylesheet" href="main.css">
   <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 </head>
@@ -26,8 +26,8 @@
     <select id="priority" size="11" name="hero">
       <option class="first" value="first">Идеи</option>
       <option class="second" value="second">Условия</option>
-      <option class="third" value="third">ТО</option>
-      <option class="forth" value="forth">Бери и делай</option>
+      <option class="third" value="third">Бери и делай</option>
+      <option class="forth" value="forth">ТО</option>
       <option class="fifth" value="fifth">Обязательство</option>
       <option class="sixth" value="sixth">Доход/Расход</option>
       <option class="seventh" value="seventh">Заточка</option>
@@ -35,20 +35,11 @@
       <option class="ninth" value="ninth">Порядок</option>
       <option class="tenth" value="tenth">Хочу!</option>
       <option class="eleventh" value="eleventh">Заметки</option>
+      <!-- <option class="twelfth" value="twelfth">Корзина</option> -->
     </select><br>
-    <div>
-      Название
-    </div>
-    <textarea class="input inputtext" type="text" cols="35" rows="5"></textarea>
-    <div>
-      Зависим
-    </div>
-    <textarea class="input inputtags" name="tags" cols="35" rows="5"></textarea>
-    <div>
-      Блокирует
-    </div>
-    <textarea class="input inputopns" name="tags" cols="35" rows="5"></textarea>
-    <br>
+    <textarea placeholder="Название" class="input inputtext" type="text" cols="35" rows="5"></textarea><br>
+    <textarea placeholder="Зависим" class="input inputtags" name="tags" cols="35" rows="5"></textarea><br>
+    <textarea placeholder="Блокирует" class="input inputopns" name="tags" cols="35" rows="5"></textarea><br>
     <input type="date" id="date" name="trip-start">
     <input type="time" id="time" name="time">
     <br>
