--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -11,6 +11,7 @@
     });
   </script>
   <script src="jquery.js"></script>
+  <script src="jquery.touchwipe.js"></script>
   <script src="util.js"></script>
 
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
