--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -8,6 +8,7 @@
 
     moment.locale('ru', {
       months: 'января_февраля_марта_апреля_мая_июня_июля_августа_сенятбря_октября_ноября_декабря'.split('_'),
+      weekdays: 'Воскресенье_Понедельник_Вторник_Среда_Четверг_Пятница_Суббота'.split('_')
     });
   </script>
   <script src="jquery.js"></script>
@@ -61,10 +62,10 @@
 
 
   <div class="clock">
-    <form name="f1" id="f1" action="">
-      <input type="text" class="t1" name="t1" value="" />
-      <input class="timebutton" type="submit" name="b1" value="Найти" />
-    </form>
+
+    <input type="text" class="t1" name="t1" value="" />
+    <!-- <input class="timebutton" id="searchbutton" type="button" name="b1" value="Найти" /> -->
+    <button class="timebutton" id="clearsearch">Х</button>
   </div>
 
   <div id="status">offline</div>
@@ -73,5 +74,11 @@
   <script src="exe.js"></script>
   <script src="index.js"></script>
 </body>
+<footer>
+  <br>
+  <p>
+    <center>bla bla bla</center>
+  </p><br>
+</footer>
 
 </html>
