--- a/static/mustache.html
+++ b/static/mustache.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<body>
-<script>
-    let myVariable = { name: '123' }
-    const markup = `something ${myVariable.name}`;
-    console.log(markup);
-    document.body.innerHTML = markup;
+<script src="jquery.js"></script>
 
-</script>
+<body>
+    <script>
+        let myVariable = { name: '123' }
+        const markup = `<p>something ${myVariable.name} </p>`;
+        console.log(markup);
+        $(document).on('click', 'body', function () {
+            myVariable.name='yrs!!!';
+            document.body.innerHTML = 'gggg';
+        });
+        document.body.innerHTML = markup;
+
+    </script>
 </body>
