--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -66,7 +66,7 @@
 
 
 
-
+  <button class='timebutton' id="scrollTopButton">Наверх</button>
   <div id="status">offline</div>
   <script src="/socket.io/socket.io.js"></script>
   <script src="mobile.js"></script>
