--- a/desktop/index.html
+++ b/desktop/index.html
@@ -19,37 +19,39 @@
   <div id="tasks" class="list">
 
   </div>
-  <div class="editor">
-    <button class='delete' value='del'>Удалить</button>
-    <span>Активно</span>
-    <input class="checkbox" type="checkbox"> <br>
-    <select id="priority" size="11" name="hero">
-      <option class="first" value="first">Идеи</option>
-      <option class="second" value="second">Условия</option>
-      <option class="third" value="third">Бери и делай</option>
-      <option class="forth" value="forth">ТО</option>
-      <option class="fifth" value="fifth">Обязательство</option>
-      <option class="sixth" value="sixth">Доход/Расход</option>
-      <option class="seventh" value="seventh">Заточка</option>
-      <option class="eighth" value="eighth">Новые горизонты</option>
-      <option class="ninth" value="ninth">Порядок</option>
-      <option class="tenth" value="tenth">Хочу!</option>
-      <option class="eleventh" value="eleventh">Заметки</option>
-      <!-- <option class="twelfth" value="twelfth">Корзина</option> -->
-    </select><br>
-    <textarea placeholder="Название" class="input inputtext" type="text" cols="35" rows="5"></textarea><br>
-    <textarea placeholder="Зависим" class="input inputtags" name="tags" cols="35" rows="5"></textarea><br>
-    <textarea placeholder="Блокирует" class="input inputopns" name="tags" cols="35" rows="5"></textarea><br>
-    <input type="date" id="date" name="trip-start">
-    <input type="time" id="time" name="time">
-    <br>
-    <button id="plustoday">Сегодня</button>
-    <button id="plusnow">Сейчас</button>
-    <button id="plusday">+1 день</button>
-    <button id="tomorrow">Завтра</button>
-    <button id="plushour">+1 час</button><br>
-    <button id="plus15">+15 минут</button>
-    <button id="plusweek">+1 неделя</button>
+  <div class="editorbox">
+    <div class="editor">
+      <button class='delete' value='del'>Удалить</button>
+      <span>Активно</span>
+      <input class="checkbox" type="checkbox"> <br>
+      <select id="priority" size="3" name="hero">
+        <option class="first" value="first">План</option>
+        <option class="second" value="second">Дело</option>
+        <option class="third" value="third">Идея</option>
+        <!--<option class="forth" value="forth">000</option>
+        <option class="fifth" value="fifth">000</option>
+        <option class="sixth" value="sixth">000</option>
+        <option class="seventh" value="seventh">000</option>
+        <option class="eighth" value="eighth">000</option>
+        <option class="ninth" value="ninth">000</option>
+        <option class="tenth" value="tenth">000</option>
+        <option class="eleventh" value="eleventh">000</option>
+         <option class="twelfth" value="twelfth">Корзина</option> -->
+      </select><br>
+      <textarea placeholder="Название" class="input inputtext" type="text" cols="35" rows="5"></textarea><br>
+      <textarea placeholder="Зависим" class="input inputtags" name="tags" cols="35" rows="5"></textarea><br>
+      <textarea placeholder="Блокирует" class="input inputopns" name="tags" cols="35" rows="5"></textarea><br>
+      <input type="date" id="date" name="trip-start">
+      <input type="time" id="time" name="time">
+      <br>
+      <button id="plustoday">Сегодня</button>
+      <button id="plusnow">Сейчас</button>
+      <button id="plusday">+1 день</button>
+      <button id="tomorrow">Завтра</button>
+      <button id="plushour">+1 час</button><br>
+      <button id="plus15">+15 минут</button>
+      <button id="plusweek">+1 неделя</button>
+    </div>
   </div>
 
   <div class="clock"></div>
