--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -76,7 +76,7 @@
 <footer>
   <br>
   <p>
-    <center>bla bla bla</center>
+    <center class="bottom">«‎Маяк»‎ – инструмент управления делами Игоря Ваулина</center>
   </p><br>
 </footer>
 
