--- a/mobile/mobile.html
+++ b/mobile/mobile.html
@@ -69,9 +69,12 @@
   <button class='timebutton' id="scrollTopButton">Наверх</button>
   <div id="status">offline</div>
   <script src="/socket.io/socket.io.js"></script>
+  <script src="render.js"></script>
   <script src="mobile.js"></script>
   <script src="exe.js"></script>
   <script src="index.js"></script>
+  <script src="sort.js"></script>
+
 </body>
 <footer>
   <br>
