--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,6 @@
     });
   </script>
   <script src="jquery.js"></script>
-  <script src="jquery.touchwipe.js"></script>
   <script src="util.js"></script>
 
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
@@ -29,6 +28,23 @@
 </head>
 
 <body>
+
+  <div class="demo">
+    <h2>&lt;input type="text"&gt;</h2>
+    <div class="control-group">
+      <label for="input-tags">Tags:</label>
+      <input type="text" id="input-tags" class="demo-default" value="awesome,neat">
+    </div>
+    <script>
+      $('#input-tags').selectize({
+        plugins: ['restore_on_backspace'],
+        persist: false,
+        createOnBlur: true,
+        create: true
+      });
+    </script>
+  </div>
+
   <div class="main">
     <div class="search">
       <input placeholder="Поиск..." type="text" class="t1 input" name="t1" value="" />
