render amd css impov

--- a/static/index.html
+++ b/static/index.html
@@ -14,13 +14,17 @@
   <script src="jquery.js"></script>
   <script src="util.js"></script>
 
-  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> -->
   <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="viewport" content="user-scalable=no, width=device-width">
   <title>Lighthouse ToDo</title>
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400&display=swap" rel="stylesheet">
+
   <link rel="apple-touch-icon" href="./favicon.png" />
   <link rel="apple-touch-startup-image" href="./favicon.png" />
   <link rel="stylesheet" href="mobile.css">
