--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,10 @@
   <link rel="apple-touch-startup-image" href="./favicon.png" />
   <link rel="stylesheet" href="mobile.css">
   <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 </head>
 
 <body>
