--- a/static/index.html
+++ b/static/index.html
@@ -56,7 +56,7 @@
 <footer>
   <br>
   <p>
-    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.5</center>
+    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.56/center>
   </p><br>
 </footer>
 
