--- a/static/index.html
+++ b/static/index.html
@@ -44,6 +44,8 @@
     </div>
     <div id="tasks" class="list"></div>
     <button class='timebutton' id="scrollTopButton">Наверх</button>
+    <button class='mainbutton timebutton task newtask' id="newtaskbutton">Новая запись</button>
+
     <div id="status">offline</div>
     <script src="/socket.io/socket.io.js"></script>
     <script src="render.js"></script>
@@ -56,7 +58,7 @@
 <footer>
   <br>
   <p>
-    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.13</center>
+    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.14</center>
   </p><br>
 </footer>
 
