--- a/static/index.html
+++ b/static/index.html
@@ -28,6 +28,7 @@
   <link rel="apple-touch-icon" href="./favicon.png" />
   <link rel="apple-touch-startup-image" href="./favicon.png" />
   <link rel="stylesheet" href="mobile.css">
+  <!-- <link rel="stylesheet" href="white.css"> -->
   <link href="favicon.png" rel="shortcut icon" type="image/x-icon" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -57,7 +58,7 @@
 <footer>
   <br>
   <p>
-    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.23</center>
+    <center class="bottom">«‎Маяк»‎ - инструмент управления делами Игоря Ваулина - v.0.0.24</center>
   </p><br>
 </footer>
 
