--- a/src/static/index.html
+++ b/src/static/index.html
@@ -34,6 +34,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap');
+  </style>
+
 </head>
 
 <body>
@@ -54,17 +58,14 @@
   </div>
 </body>
 <footer>
-  <br>
-  <p>
-    <center class="bottom">«‎Маяк»‎ –— инструмент управления делами Игоря Ваулина –— v.0.1.0
-      <br>
-      <br>
-      Подробная информация в нашем <a target="_blank" href="https://t.me/lighthousetodo">телеграм чате</a>
-    </center>
-    </center>
+  <center class="bottom">«‎Маяк»‎ –— инструмент управления делами Игоря Ваулина –— v.0.1.1
     <br>
-    <center class="bottom">
-  </p>
+    <br>
+    Подробная информация в нашем <a target="_blank" href="https://t.me/lighthousetodo">телеграм чате</a>
+  </center>
+  </center>
+  <br>
+  <center class="bottom">
 </footer>
 
 </html>
