--- a/src/static/index.html
+++ b/src/static/index.html
@@ -35,7 +35,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital@1&display=swap');
   </style>
 
 </head>
