--- a/src/static/index.html
+++ b/src/static/index.html
@@ -35,7 +35,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet">
 
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital@1&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
   </style>
 
 </head>
@@ -58,7 +58,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ –— инструмент управления делами Игоря Ваулина –— v.0.1.3
+  <center class="bottom">«‎Маяк»‎ –— инструмент управления делами Игоря Ваулина –— v.0.1.4
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/lighthousetodo">телеграм чате</a>
