--- a/src/static/index.html
+++ b/src/static/index.html
@@ -36,6 +36,7 @@
 
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
   </style>
 
 </head>
@@ -58,7 +59,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ –— инструмент управления делами Игоря Ваулина –— v.0.1.9
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.10
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/lighthousetodo">телеграм чате</a>
