--- a/src/static/index.html
+++ b/src/static/index.html
@@ -47,8 +47,10 @@
       <input placeholder="Поиск..." type="text" class="t1 input" name="t1" value="" />
     </div>
     <div id="tasks" class="list"></div>
-    <button class='timebutton' id="scrollTopButton">Наверх</button>
-    <button class='mainbutton timebutton task newtask' id="newtaskbutton"></button>
+    <div id="buttoncontainer">
+      <button class='timebutton' id="scrollTopButton">Наверх</button>
+      <button class='newtask' id="newtaskbutton"></button>
+    </div>
     <div id="status">offline</div>
     <script src="config.js"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -59,10 +61,10 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.15
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.16
     <br>
     <br>
-    Подробная информация в нашем <a target="_blank" href="https://t.me/lighthousetodo">телеграм чате</a>
+    Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
   </center>
 </footer>
 
