--- a/src/static/index.html
+++ b/src/static/index.html
@@ -38,7 +38,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
   </style>
-
+  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.16
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.17
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
