--- a/src/static/index.html
+++ b/src/static/index.html
@@ -18,7 +18,8 @@
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="viewport" content="user-scalable=no, width=device-width">
+  <meta name="viewport"
+    content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
   <title>Lighthouse ToDo</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +39,6 @@
     @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap');
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
   </style>
-  <meta name="viewport" content="width=device-width, user-scalable=no">
 </head>
 
 <body>
@@ -61,7 +61,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.17
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.18
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
