--- a/src/static/index.html
+++ b/src/static/index.html
@@ -14,7 +14,7 @@
   <script src="jquery.js"></script>
   <script src="util.js"></script>
 
-  <meta name="viewport" content="width=device-width, initial-scale = 1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -61,7 +61,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.22
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.23
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
