--- a/src/static/index.html
+++ b/src/static/index.html
@@ -17,6 +17,7 @@
   <meta charset="UTF-8">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Lighthouse ToDo</title>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -58,7 +59,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.25
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.26
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
