first scribe tag

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -46,7 +46,7 @@
     </div>
     <div id="tasks" class="list"></div>
     <div id="buttoncontainer">
-      <button class='timebutton' id="scrollTopButton">Наверх</button>
+      <button class='timebutton' id="scrollTopButton">Фокус</button>
       <button class='newtask' id="newtaskbutton"></button>
     </div>
     <div id="status">offline</div>
@@ -59,7 +59,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.41
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.1.42
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
