--- a/src/static/index.html
+++ b/src/static/index.html
@@ -59,7 +59,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.11
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.11a
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
