--- a/src/static/index.html
+++ b/src/static/index.html
@@ -43,6 +43,7 @@
   <div class="main">
     <div class="search">
       <input placeholder="Поиск..." type="text" class="t1 input" name="t1" value="" />
+      <button id="clearsearchbutton" class="clearsearch">╳</button>
     </div>
     <div id="tasks" class="list"></div>
     <div id="buttoncontainer">
@@ -59,7 +60,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.11a
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.12
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
