--- a/src/static/index.html
+++ b/src/static/index.html
@@ -52,6 +52,7 @@
     </div>
     <div id="status">offline</div>
     <script src="config.js"></script>
+    <script src="event.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="render.js"></script>
     <script src="exe.js"></script>
@@ -60,7 +61,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.14
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.15
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
