--- a/src/static/index.html
+++ b/src/static/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-  <!-- <div id="speed"></div> -->
+  <div id="speed"></div>
   <div class="main">
     <div class="search">
       <input placeholder="Поиск..." type="text" class="t1 input" name="t1" value="" />
@@ -62,7 +62,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.18
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.19
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
