--- a/src/static/index.html
+++ b/src/static/index.html
@@ -53,6 +53,7 @@
     </div>
     <div id="status">offline</div>
     <script src="config.js"></script>
+    <script src="oldversion.js"></script>
     <script src="event.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="render.js"></script>
@@ -62,7 +63,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.2.25
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.3.0
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
