--- a/src/static/index.html
+++ b/src/static/index.html
@@ -48,7 +48,7 @@
     </div>
     <div id="tasks" class="list"></div>
     <div id="buttoncontainer">
-      <button class='timebutton' id="scrollTopButton">Фокус</button>
+      <button class='timebutton' id="scrollTopButton">●</button>
       <button class='newtask' id="newtaskbutton"></button>
     </div>
     <div id="status">offline</div>
@@ -63,7 +63,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.3.5
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.4.0
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
