--- a/src/static/index.html
+++ b/src/static/index.html
@@ -40,6 +40,7 @@
 </head>
 
 <body>
+  <div id="staticbackground"></div>
   <div id="speed"></div>
   <div class="main">
     <div class="search">
@@ -63,7 +64,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.4.3
+  <center class="bottom">«‎Маяк»‎ — инструмент управления делами Игоря Ваулина — v.0.4.4
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
