--- a/src/static/index.html
+++ b/src/static/index.html
@@ -49,7 +49,7 @@
     </div>
     <div id="tasks" class="list"></div>
     <div id="buttoncontainer">
-      <!-- <button class='timebutton' id="scrollTopButton">●</button> -->
+      <button class='timebutton' id="scrollTopButton">●</button>
       <button class='newtask' id="newtaskbutton"></button>
     </div>
     <div id="status">offline</div>
@@ -64,7 +64,7 @@
   </div>
 </body>
 <footer>
-  <center class="bottom">«‎Локомотив — Навигатор»‎ — инструмент управления делами Игоря Ваулина — v.0.5.0
+  <center class="bottom">«‎Локомотив — Навигатор»‎ — инструмент управления делами Игоря Ваулина — v.0.5.1
     <br>
     <br>
     Подробная информация в нашем <a target="_blank" href="https://t.me/self_managment">телеграм чате</a>
