--- a/src/static/index.html
+++ b/src/static/index.html
@@ -55,6 +55,7 @@
     <div id="status">offline</div>
     <script src="config.js"></script>
     <script src="oldversion.js"></script>
+    <script src="list.js"></script>
     <script src="event.js"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src="render.js"></script>
