--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 <head>
+  <title>AdAstraToDo</title>
   <script type="module">
     import { reactive, html } from "@arrow-js/core";
   </script>
