--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -1,27 +1,33 @@
 <!doctype html>
-
 <head>
-	<title>Ad Astra To Do</title>
-	<script type="module">
-		import { reactive, html } from "@arrow-js/core";
-	</script>
-	<script type="module" src="/index.js"></script>
-	<link rel="preconnect" href="https://fonts.googleapis.com" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-	<link
-		href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap"
-		rel="stylesheet"
-	/>
-	<link
-		href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap"
-		rel="stylesheet"
-	/>
+  <title>Ad Astra To Do</title>
+  <meta charset="UTF-8" />
+  <script type="module">
+    import { reactive, html } from "@arrow-js/core"
+  </script>
+  <script type="module" src="/index.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet" />
 
-	<link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 
 <html class="bg-white dark:bg-black">
-	<body class="select-none cursor-default text-lg h-screen">
-		<div class="h-screen" id="App"></div>
-	</body>
+  <body class="text-lg cursor-default select-none">
+    <div id="App"></div>
+    <footer class="py-6 text-lg text-white notomono">
+      <div class="container mx-auto text-center">
+        <p class="mb-4"><strong>Ad Astra To Do</strong></p>
+        <p class="mb-4"
+          >Система управления делами
+          <a href="https://t.me/vaulinblog" class="underline" target="_blank" rel="noopener noreferrer"
+            >Игоря Ваулина</a
+          ></p
+        >
+        <p class="mt-4 mb-12">v.0.0.1</p>
+      </div>
+    </footer>
+  </body>
 </html>
