--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -2,6 +2,9 @@
 <head>
   <title>Ad Astra To Do</title>
   <meta charset="UTF-8" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <script type="module">
     import { reactive, html } from "@arrow-js/core"
   </script>
