auth and serach css improvements

--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <script type="module">
     import { reactive, html } from "@arrow-js/core"
   </script>
@@ -29,7 +29,7 @@
             >Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12">v.0.0.1</p>
+        <p class="mt-4 mb-12">v.0.0.2</p>
       </div>
     </footer>
   </body>
