--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -15,10 +15,15 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet" />
 
   <link rel="stylesheet" href="index.css" />
+  <!-- <script>
+    document.addEventListener("gesturestart", function (e) {
+      e.preventDefault()
+    })
+  </script> -->
 </head>
 
 <html class="bg-white dark:bg-black">
-  <body class="text-lg cursor-default select-none">
+  <body class="text-lg cursor-default select-none touch-pan-y">
     <div id="App"></div>
     <footer class="py-6 text-lg text-white notomono">
       <div class="container mx-auto text-center">
@@ -29,7 +34,7 @@
             >Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12">v.0.0.2</p>
+        <p class="mt-4 mb-12">v.0.0.3</p>
       </div>
     </footer>
   </body>
