--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -26,7 +26,7 @@
   <body class="text-lg cursor-default select-none touch-pan-y">
     <div class="fixed w-full h-full bg-cover bgimg bg-nearwhite dark:bg-black -z-10"></div>
     <div id="App"></div>
-    <footer class="py-6 text-lg text-white notomono">
+    <footer class="py-6 text-lg text-white dark:text-mygray notomono">
       <div class="container mx-auto text-center">
         <p class="mb-4"><strong>Ad Astra To Do</strong></p>
         <p class="mb-4"
@@ -35,7 +35,7 @@
             >Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12">v.0.0.4</p>
+        <p class="mt-4 mb-12">v.0.0.5</p>
       </div>
     </footer>
   </body>
