--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -24,7 +24,7 @@
 
 <html class="bg-white dark:bg-black">
   <body class="text-lg cursor-default select-none touch-pan-y">
-    <div class="fixed w-full h-full bg-cover bgimg bg-nearwhite dark:bg-black -z-10"></div>
+    <div class="fixed w-full h-full bg-cover bgimg bg-neutral-100 dark:bg-neutral-900 -z-10"></div>
     <div id="App"></div>
     <footer class="py-6 text-lg text-white dark:text-mygray notomono">
       <div class="container mx-auto text-center">
