--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -11,22 +11,17 @@
   <script type="module" src="/index.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&display=swap" rel="stylesheet" />
-
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&family=Roboto+Mono:wght@300&family=Open+Sans&display=swap"
+    rel="stylesheet" />
   <link rel="stylesheet" href="index.css" />
-  <!-- <script>
-    document.addEventListener("gesturestart", function (e) {
-      e.preventDefault()
-    })
-  </script> -->
 </head>
 
 <html class="bg-white dark:bg-black">
   <body class="text-lg cursor-default select-none touch-pan-y">
     <div class="fixed w-full h-full bg-cover bgimg bg-neutral-100 dark:bg-neutral-900 -z-10"></div>
     <div id="App"></div>
-    <footer class="py-6 text-lg text-white dark:text-neutral-400 notomono">
+    <footer class="py-6 text-lg text-white dark:text-neutral-400 fontaccent">
       <div class="container mx-auto text-center">
         <p class="mb-4"><strong>Ad Astra To Do</strong></p>
         <p class="mb-4"
@@ -35,7 +30,7 @@
             >Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12">v.0.1.4</p>
+        <p class="mt-4 mb-12">v.0.1.5</p>
       </div>
     </footer>
   </body>
