--- a/arrowclient/index.html
+++ b/arrowclient/index.html
@@ -23,14 +23,14 @@
     <div id="App"></div>
     <footer class="py-6 text-lg text-white dark:text-neutral-400 fontaccent">
       <div class="container mx-auto text-center">
-        <p class="mb-4"><strong>Ad Astra To Do</strong></p>
-        <p class="mb-4"
+        <p class="mb-4"><strong class="fontaccent">Ad Astra To Do</strong></p>
+        <p class="mb-4 fontaccent"
           >Система управления делами
-          <a href="https://t.me/vaulinblog" class="underline" target="_blank" rel="noopener noreferrer"
+          <a href="https://t.me/vaulinblog" class="underline fontaccent" target="_blank" rel="noopener noreferrer"
             >Игоря Ваулина</a
           ></p
         >
-        <p class="mt-4 mb-12">v.0.1.5</p>
+        <p class="mt-4 mb-12 fontaccent">v.0.1.5</p>
       </div>
     </footer>
   </body>
